previous version files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'  # Match service port
    # alb.ingress.kubernetes.io/healthcheck-port: "80" # Match service port
    # alb.ingress.kubernetes.io/healthcheck-path: /health    
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service # ⭐ Must match `service.yaml`’s name
            port:
              number: 80
